# RaylibProject

./: .gitignore  CMakeLists.txt  Overworld.tsj  plan_passive_skills.md  tilemap.tmj  tilemapcpy.tmj
data/characters/: alice.json  jason.json  phantom.json  shadow.json
data/dialogues/: bob_lines.json  phantom_lines.json
data/item/: misc.json
data/map/tilemap/: tilemap.tmj  untitled.tmj
data/map/tilesets/: Topdown RPG 32x32 - Bushes 1.1.tsj  Topdown RPG 32x32 - Ground Tileset 1.2.tsj  Topdown RPG 32x32 - Rocks 1.2.tsj  Topdown RPG 32x32 - Ruins.tsj  Topdown RPG 32x32 - Tree Stumps and Logs 1.2.tsj  Topdown RPG 32x32 - Trees 1.2.tsj  Topdown RPG 32x32 - WaterTileset.tsj  assets.tsj
data/quests/: quests.json
data/system/: assets.json  settings.json
include/: Loader.h  animations.h  battleResultScene.h  battleScene.h  gameData.h  gameScene.h  menuScene.h  scene.h  skillvm.h  startupScene.h
src/: Loader.cpp  battleResultScene.cpp  battleScene.cpp  gameScene.cpp  main.cpp  menuScene.cpp  skillvm.cpp  startupScene.cpp
